# Frontier-Bridge

./: .gitignore  CONTRIBUTING.md  GOVERNANCE.md  IP_NOTICE.md  LICENSE  MISSION.md  NOTICE  README.md  SECURITY.md  pyproject.toml
docs/: architecture.md  benchmark_playbook.md  compatibility_matrix.md  demo.tape  demo_script.md  enterprise_bridge.md  faq.md  fleet_runbook.md  launch_checklist.md  linux_runtime.md  linux_verification.md  memory_hierarchy.md  roadmap.md  spike_cuda_expert_streaming.md  spike_dual_node_thunderbolt.md
fleet/: example.yaml
hardware_profiles/: apple_m5_max_137gb_detected.yaml  gb10_128gb.yaml  m5_max_128gb.yaml  m5_max_128gb_tb5_ssd.yaml  rtx4090_laptop_16gb_128ram.yaml  rtx5090_128ram_egpu_4090.yaml  rtx6000_96gb_64ram.yaml
notebooks/: memory_hierarchy.ipynb
plans/: laptop4090_dsv4flash_q2_coding_32k.yaml  laptop4090_glm52_q2_coding_32k.yaml  m5max_dsv4flash_q2_chat_16k.yaml  m5max_dsv4flash_q2_chat_8k.yaml  m5max_glm52_q4_coding_32k.yaml
rfcs/: 0001-resource-graph-schemas.md  0002-normalized-tiers-external-resources.md  0003-runbooks.md  0004-catalog-admission.md  0005-fleet.md
runbooks/: README.md  gpu-laptop-128gb.yaml  unified-128gb.yaml
runtime_adapters/: README.md
schemas/: benchresult.v1.json  hwprofile.v1.json  modelprofile.v1.json  plan.v1.json
scripts/: bootstrap.sh  build_llama_cpp_cuda.sh
tests/: conftest.py  test_bench.py  test_detect_parsers.py  test_doctor.py  test_experiments.py  test_fleet.py  test_gguf.py  test_ingest.py  test_planner.py  test_provision.py  test_results.py  test_runbook.py  test_runner.py  (+3 more)
(+71 files in other folders)
