[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frontier-bridge"
version = "0.1.0.dev0"
description = "The open bridge from workstation AI to enterprise AI infrastructure: hardware profiling, memory planning, runtime selection, and reproducible benchmarks for frontier open MoE models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Brian Letort" }]
keywords = ["llm", "moe", "inference", "hardware", "memory-planning", "benchmarks"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "typer>=0.12",
  "pyyaml>=6.0",
  "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
frontier = "frontier_bridge.cli:app"

[project.urls]
Homepage = "https://github.com/Brianletort/Frontier-Bridge"
Issues = "https://github.com/Brianletort/Frontier-Bridge/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
frontier_bridge = ["schemas/*.json", "bench/prompts/*.jsonl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
